--- a/secondDrill/secondZepDrill.html
+++ b/secondDrill/secondZepDrill.html
@@ -10,11 +10,13 @@
   <div id="abraLabs-2">
     <header>
       <div class="logo">
-
         <img src="./imgs/logo.png" alt="">
-        <h1 class="mainHeader"></h1>
       </div>
     </header>
+    <section id="registration">
+      <h1 class="mainHeader">front-end course</h1>
+      <h4 class="collab">In collaboration with</h4>
+    </section>
   </div>
 </body>
 
