--- a/secondDrill/secondZepDrill.html
+++ b/secondDrill/secondZepDrill.html
@@ -13,10 +13,32 @@
         <img src="./imgs/logo.png" alt="">
       </div>
     </header>
-    <section id="registration">
+    <main id="registration">
       <h1 class="mainHeader">front-end course</h1>
-
-    </section>
+      <p class="collab">In collaboration with</p>
+      <img src="./imgs/image.jpg" alt="" class="iIA">
+      <h2 class="secondHead">Your leap into the high-tech world</h2>
+      <p class="secondPara">Building efficient web and mobile interfaces is often challenging and requires the use of
+        imperative logic. React enables you to declaratively describe user interfaces in terms of their state, and it
+        will do the heavy lifting of natively building them for you. In this course, React: Getting Started, you will
+        delve into the fundamental concepts about React and use them to build practical web applications.</p>
+      <strong class="subtext">You have a unique opportunity to take all the knowledge, experience and professionalism
+        you have
+        accumulated and leverage them into the high-tech world.</strong>
+      <button class="readMore">Read more here</button>
+      <hr class="hRow">
+      <form>
+        <h2 class="formHeader">Fill in the details below</h2>
+        <p class="subFormHead">Please fill in your details here and we’ll be in touch with you soon.</p>
+        <input type="text" class="formInput" placeholder="full name"><input type="text" class="formInput"
+          placeholder="email"><input type="text" class="formInput" placeholder="phone">
+        <button class="formBtn">send</button>
+        <a href="#" class="contactUs">contact us here!</a>
+      </form>
+      <footer>
+        <img src="./imgs/imageAbra.jpg" alt="" class="footerBgc">
+      </footer>
+    </main>
   </div>
 </body>
 
