--- a/secondDrill/secondZepDrill.html
+++ b/secondDrill/secondZepDrill.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="./css-reset.css">
-  <title>Abra Labs drill</title>
+  <title>Abra Labs drill 2</title>
 </head>
 
 <body>
