--- a/thirdDrill/thirdZepDrill.html
+++ b/thirdDrill/thirdZepDrill.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="./imgs/LogoDark.jpg" alt="">
+      <img src="./imgs/LogoDark.jpg" alt="LOGO">
     </div>
   </header>
   <main class="mainSection">
