--- a/forthDrill/forthZepDrill.html
+++ b/forthDrill/forthZepDrill.html
@@ -5,13 +5,58 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./css-reset.css">
   <title>Abra Drill 4</title>
 </head>
 
 <body>
-  <h1>to be continue...</h1>
+  <div class="logo">
+    <img src="./imgs/LogoDark.jpg" alt="LOGO">
+  </div>
+  </header>
+  <main class="mainSection">
+    <h1 class="mainHeader">course screen</h1>
+    <p class="subHeader">button states</p>
+    <div class="button-state">
+      <!-- fill buttons -->
+      <div class="orangeBtn">
+        <label class="defaultLabel" for="defaultInp">default</label>
+        <button type="button" id="defaultInp">send</button>
+      </div>
+      <div class="orangeBtn">
+        <label class="hoverLabel" for="hoverInp">hover</label>
+        <button type="button" id="hoverInp">send</button>
+      </div>
+      <div class="orangeBtn">
+        <label class="focusLabel" for="focusInp">focus</label>
+        <button type="button" id="focusInp">send</button>
+      </div>
+      <div class="orangeBtn">
+        <label class="clickLabel" for="clickInp">click</label>
+        <button type="button" id="clickInp">send</button>
+      </div>
+      <!-- outline buttons -->
+      <div class="whiteBtn">
+        <label class="default" for="defaultInput">default</label>
+        <button type="button" id="defaultInput">send</button>
+      </div>
+      <div class="whiteBtn">
+        <label class="hover" for="hoverInput">hover</label>
+        <button type="button" id="hoverInput">send</button>
+      </div>
+      <div class="whiteBtn">
+        <label class="focus" for="focusInput">focus</label>
+        <button type="button" id="focusInput">send</button>
+      </div>
+      <div class="whiteBtn">
+        <label class="click" for="clickInput">click</label>
+        <button type="button" id="clickInput">send</button>
+      </div>
+    </div>
+
+
+  </main>
 
 
 </body>
