--- a/firstDrill/firstZeplinDrill.html
+++ b/firstDrill/firstZeplinDrill.html
@@ -21,7 +21,7 @@
     <h1 class="headline">React</h1>
     <p class="subtext">A javascript library for building user interfaces</p>
     <button class="button-1">get started</button><button class="button-2">tutorial</button><br>
-    <div class="articlePara-1">
+    <section class="articlePara-1">
       <h2 class="firstHead">
         Learn Once, Write Anywhere
       </h2>
@@ -31,15 +31,15 @@
         React can render on the server using Node and power mobile apps using
         <a href="#" class="paraLink">React Native.</a>
       </p>
-    </div>
-
-    <div class="articlePara-2">
+    </section>
+    <hr>
+    <section class="articlePara-2">
 
       <h2 class="secondHead">
         A Simple Component
       </h2>
       <div class="secondPara">
-        <span class="insideText-1">
+        <p class="insideText-1">
 
           React components implement a
           <strong>render()</strong>
@@ -49,17 +49,17 @@
           <strong>render()</strong>
           via
           <strong>this.props</strong>.
-        </span>
+        </p>
 
-        <span class="insideText-2">
+        <p class="insideText-2">
           JSX is optional and not required to use React. Try the
           <a href="#" class="paraLink-2">Babel REPL</a>
           to see the raw JavaScript code produced by the JSX compilation step.
-        </span>
+        </p>
 
       </div>
       <img src="./imgs/image p2.jpg" class="codeImage">
-    </div>
+    </section>
     <div class="articlePara-3">
       <h2 class="thirdHead">Basic List Component</h2>
       <ol class="numList">
