--- a/secondDrill/secondZepDrill.html
+++ b/secondDrill/secondZepDrill.html
@@ -10,7 +10,7 @@
   <div id="abraLabs-2">
     <header>
       <div class="logo">
-        <img src="./imgs/logo.png" alt="">
+        <img src="./imgs/logo.png" class="center-element" alt="">
       </div>
     </header>
     <main id="registration">
