--- a/AbraTemplate/index.html
+++ b/AbraTemplate/index.html
@@ -12,12 +12,16 @@
 </head>
 
 <body>
-  <header>
-    <img src="" alt="Logo" id="logo">
-  </header>
-  <main>
+  <div class="container">
 
-  </main>
+    <header>
+      <img src="" alt="Logo" id="logo">
+    </header>
+
+    <main>
+
+    </main>
+  </div>
 </body>
 
 </html>
